--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/init.js",
+    "dev": "nodemon ./bin/init.js",
     "test-lint": "eslint ./lib",
     "test-mocha": "mocha --exit tests/**/*",
     "test-mocha-with-coverage": "nyc npm run test-mocha"
@@ -19,6 +20,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
+    "nodemon": "^3.1.4",
     "winston": "^3.14.1"
   },
   "devDependencies": {
